Refactor access token abilities and update policies for granular permissions
- Updated AccessTokenAbility enum to use hyphenated naming for granular scopes (e.g., 'forms-read' instead of 'forms:read').
- Modified FormPolicy, SubmissionPolicy, and WorkspacePolicy to align with new ability names.
- Enhanced WorkspaceController to authorize workspace creation.
- Adjusted ImpersonationMiddleware to use Auth facade for consistency.
- Updated API documentation to reflect changes in ability names and routes.

These changes improve consistency in naming conventions and enhance the authorization checks across the application.

--- a/docs/api-reference/endpoint/open-form-submissions.mdx
+++ b/docs/api-reference/endpoint/open-form-submissions.mdx
@@ -4,7 +4,7 @@ Retrieve the submissions of a specific form.
 
 ```http
 GET /open/forms/{formId}/submissions HTTP/1.1
-Authorization: Bearer <token with `submissions:read`>
+Authorization: Bearer <token with `submissions-read`>
 ```
 
 ### Response
@@ -20,7 +20,7 @@ Status: 200 OK
 
 ```http
 PUT /open/forms/{formId}/submissions/{submissionId} HTTP/1.1
-Authorization: Bearer <token with `submissions:write`>
+Authorization: Bearer <token with `submissions-write`>
 Content-Type: application/json
 
 { "data": { /* patched fields */ } }
