--- a/docs/api-reference/endpoint/open-forms-list.mdx
+++ b/docs/api-reference/endpoint/open-forms-list.mdx
@@ -1,6 +1,6 @@
 # List Forms (Public API)
 
-Retrieves all forms accessible to the provided API token. Requires the `forms:read` ability.
+Retrieves all forms accessible to the provided API token. Requires the `forms-read` ability.
 
 ```http
 GET /open/forms HTTP/1.1
