--- a/docs/api-reference/endpoint/open-workspace-users.mdx
+++ b/docs/api-reference/endpoint/open-workspace-users.mdx
@@ -4,14 +4,14 @@
 
 ```http
 GET /open/workspaces/{workspaceId}/users HTTP/1.1
-Authorization: Bearer <token with `workspace-users:read`>
+Authorization: Bearer <token with `workspace-users-read`>
 ```
 
 ## Add User to Workspace
 
 ```http
 POST /open/workspaces/{workspaceId}/users/add HTTP/1.1
-Authorization: Bearer <token with `workspace-users:write`>
+Authorization: Bearer <token with `workspace-users-write`>
 Content-Type: application/json
 
 { "email": "user@example.com", "role": "member" }
@@ -21,5 +21,5 @@ Content-Type: application/json
 
 ```http
 DELETE /open/workspaces/{workspaceId}/users/{userId}/remove HTTP/1.1
-Authorization: Bearer <token with `workspace-users:write`>
+Authorization: Bearer <token with `workspace-users-write`>
 ```
