Refactor access token abilities and update authorization policies
- Removed obsolete `SubmissionPolicy` as its functionality has been integrated into the `FormPolicy`, streamlining the authorization process.
- Updated the `AccessTokenAbility` enum to remove submission-related abilities, focusing on form-related permissions.
- Modified the `FormController` and `ListFormsController` to use the new `ownsWorkspace` authorization method, enhancing clarity and consistency in permission checks.
- Adjusted the `FormPolicy` to include logic for checking write abilities based on the current access token, ensuring proper authorization for form creation.
- Updated API documentation to reflect changes in ability names and routes, improving clarity for developers.

These changes enhance the maintainability and clarity of the authorization system by consolidating policies and refining access control mechanisms.

--- a/docs/api-reference/endpoint/open-form-submissions.mdx
+++ b/docs/api-reference/endpoint/open-form-submissions.mdx
@@ -4,7 +4,7 @@ Retrieve the submissions of a specific form.
 
 ```http
 GET /open/forms/{formId}/submissions HTTP/1.1
-Authorization: Bearer <token with `submissions-read`>
+Authorization: Bearer <token with `forms-read`>
 ```
 
 ### Response
