Refine API documentation by clarifying pagination details and removing redundant properties from the OpenAPI specification. The introduction now specifies that some list endpoints are paginated, and unnecessary fields related to maximum file size and read-only access have been removed for improved clarity and conciseness.

--- a/docs/api-reference/introduction.mdx
+++ b/docs/api-reference/introduction.mdx
@@ -38,7 +38,7 @@ When your request attempts an operation outside the abilities attached to the to
 
 ## Pagination
 
-List endpoints are paginated. The default page size is **100** items. Use the `page` query parameter (`?page=2`) to retrieve subsequent pages.
+Some list endpoints are paginated. Use the `page` query parameter (`?page=2`) to retrieve subsequent pages.
 
 ## Rate limits
 
