--- a/docs/configuration/environment-variables.mdx
+++ b/docs/configuration/environment-variables.mdx
@@ -13,6 +13,7 @@ The following environment variables are used to [configure the Laravel](https://
 
 There are dedicated configuration pages available for more detailed setup instructions on specific topics:
 
+-   [OAuth Integration Setup](../configuration/oauth-setup)
 -   [File Storage (S3)](../configuration/aws-s3)
 -   [Email Configuration (SMTP)](../configuration/email-setup)
 -   [Custom Domain](../configuration/custom-domain)
@@ -29,18 +30,28 @@ There are dedicated configuration pages available for more detailed setup instru
 | `OPEN_AI_API_KEY`           | API key for accessing OpenAI services.                                                                   |
 | `UNSPLASH_ACCESS_KEY`       | Access key for Unsplash API.                                                                             |
 | `UNSPLASH_SECRET_KEY`       | Secret key for Unsplash API.                                                                             |
-| `GOOGLE_CLIENT_ID`          | Client ID for Google OAuth.                                                                              |
-| `GOOGLE_CLIENT_SECRET`      | Client secret for Google OAuth.                                                                          |
-| `GOOGLE_REDIRECT_URL`       | Redirect URL for Google OAuth.                                                                           |
-| `GOOGLE_AUTH_REDIRECT_URL`  | Authentication redirect URL for Google OAuth.                                                            |
-| `GOOGLE_FONTS_API_KEY`      | API key for accessing Google Fonts.                                                                      |
 | `FRONT_URL`                 | Public facing URL of the front-end.                                                                      |
 | `FRONT_API_SECRET`          | Shared secret with the front-end.                                                                        |
-| `TELEGRAM_BOT_ID`           | ID of your Telegram bot for notifications.                                                               |
-| `TELEGRAM_BOT_TOKEN`        | Authentication token for your Telegram bot.                                                              |
 | `JWT_TTL`                   | Time to live for JSON Web Tokens (JWT).                                                                  |
 | `JWT_SECRET`                | Secret key used to sign JWTs.                                                                            |
 | `JWT_SKIP_IP_UA_VALIDATION` | Set to `true` to disable JWT IP and User Agent validation (defaults to `false`). Useful for dynamic IPs. |
+
+### OAuth Integration Environment Variables
+
+OAuth integrations enable user authentication and third-party service connections. OpnForm automatically handles OAuth redirect URLs - you don't need to manually configure redirect URIs in your OAuth applications.
+
+<Info>
+For detailed setup instructions for each OAuth provider, see the [OAuth Integration Setup](../configuration/oauth-setup) guide.
+</Info>
+
+| Variable Name           | Description                                                                                               |
+| ----------------------- | --------------------------------------------------------------------------------------------------------- |
+| `GOOGLE_CLIENT_ID`      | Client ID for Google OAuth authentication and Google Sheets integration.                                 |
+| `GOOGLE_CLIENT_SECRET`  | Client secret for Google OAuth authentication and Google Sheets integration.                             |
+| `GOOGLE_FONTS_API_KEY`  | API key for accessing Google Fonts (optional).                                                           |
+| `STRIPE_CLIENT_ID`      | Client ID for Stripe Connect OAuth integration for payment processing.                                   |
+| `STRIPE_CLIENT_SECRET`  | Client secret for Stripe Connect OAuth integration.                                                      |
+| `TELEGRAM_BOT_TOKEN`    | Authentication token for your Telegram bot notifications (bot ID is extracted automatically).           |
 
 ### User Options Environment Variables
 
