Enhance OAuthController and Documentation for Improved Clarity and Functionality
- Introduced constants `INTENT_AUTH` and `INTENT_INTEGRATION` in `OAuthController.php` to replace hardcoded intent strings, improving code maintainability and readability.
- Updated the `redirect` method to utilize these constants, ensuring consistent handling of OAuth intents.
- Enhanced the documentation in `oauth-setup.mdx` by adding a link to the developer guide for adding new OAuth integrations, providing clearer guidance for developers.
- Added a configuration guide link in `new-integration.mdx` to assist developers in understanding existing OAuth setups before implementing new integrations.

These changes aim to improve the clarity of the OAuth integration process and provide better resources for developers working with the OAuth system.

--- a/docs/configuration/oauth-setup.mdx
+++ b/docs/configuration/oauth-setup.mdx
@@ -9,6 +9,10 @@ OpnForm supports several OAuth integrations that enable users to connect externa
 OpnForm handles OAuth redirect URLs automatically. You don't need to manually configure redirect URLs in your OAuth applications - the system generates them dynamically based on your domain configuration.
 </Info>
 
+<Card title="Developer Guide" icon="code" href="/contributing/new-integration">
+If you're looking to add a new OAuth integration to OpnForm, check out the complete developer guide with architecture overview and implementation steps.
+</Card>
+
 ## Available OAuth Integrations
 
 <CardGroup cols={3}>
